<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#007f80"
    tools:context=".cliente.LoginActivity"
    android:id="@+id/loginRelative"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo2"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="@dimen/margin25"
            android:layout_marginBottom="20dp"
            android:contentDescription="TODO" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="56dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="#B2DFDB"
            android:hint="@string/txt_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_email"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="56dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_gravity="center"
            app:passwordToggleEnabled="true"
            app:boxBackgroundColor="#B2DFDB"
            android:hint="@string/txt_password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_password"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:maxLines="1"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>



        <android.support.design.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_gravity="center"
            app:cornerRadius="16dp"
            android:backgroundTint="#FFC107"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@android:color/white"
            android:layout_width="280dp"
            android:layout_marginTop="@dimen/margin30"
            android:layout_height="wrap_content"
            android:text="@string/txt_login"
            android:textSize="14sp" />

        <android.support.design.button.MaterialButton
            android:id="@+id/btn_signup"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_gravity="center"
            app:cornerRadius="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@android:color/white"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_signup"
            android:layout_marginTop="@dimen/margin10"
            android:textSize="14sp" />



    </LinearLayout>
</RelativeLayout>